Update title and content for Dr Brand Outlet page

--- a/cards/DrBrand.html
+++ b/cards/DrBrand.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dr Brand Outlet - متجر العلامات التجارية</title>
+    <title>Dr Brand Outlet - متجر الأحذية والبواط الرياضية</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <!-- Arabic Fonts -->
@@ -367,7 +367,7 @@
                 <img src="https://i.imgur.com/wwL42je.jpeg" alt="Dr Brand Outlet" class="profile-image">
             </div>
             <h1 class="profile-name">Dr Brand Outlet</h1>
-            <p class="profile-title">متجر العلامات التجارية العالمية</p>
+            <p class="profile-title">متجر الأحذية والبواط الرياضية</p>
         </div>
     </header>
 
@@ -375,11 +375,11 @@
     <div class="container">
         <!-- About Section -->
         <div class="about-section fade-in delay-1">
-            <div class="tagline">🛍️ اكتشف عالم العلامات التجارية مع Dr Brand 🛍️</div>
+            <div class="tagline">👟 اكتشف عالم الأحذية والرياضة مع Dr Brand 👟</div>
             <div class="about-text">
-                مرحباً بك في Dr Brand Outlet - وجهتك المثالية لأفضل العلامات التجارية العالمية. 
-                نقدم لك أحدث المنتجات بأفضل الأسعار وجودة لا تضاهى. 
-                تسوق بثقة واستمتع بتجربة شراء فريدة من نوعها.
+                مرحباً بك في Dr Brand Outlet - وجهتك المثالية لأفضل الأحذية والبواط الرياضية. 
+                نقدم لك أحدث موديلات الأحذية الرياضية والعصرية بأجود الخامات وأفضل الأسعار. 
+                جودة، راحة، وأناقة في كل خطوة - لأن قدميك تستحق الأفضل.
             </div>
         </div>
 
@@ -389,7 +389,7 @@
             <div class="location-container">
                 <div class="location-card">
                     <h3 class="location-name">زيارة متجرنا</h3>
-                    <p>تعال وزرنا في موقعنا واستمتع بتجربة تسوق فريدة مع أفضل العلامات التجارية</p>
+                    <p>تعال وزرنا في موقعنا وجرب بنفسك أجود أنواع الأحذية والبواط الرياضية</p>
                     <a href="https://maps.app.goo.gl/NKm7ME57HaoV8buVA?g_st=ipc" class="location-link" target="_blank">
                         <i class="fas fa-map-marker-alt"></i>
                         عرض الموقع على الخريطة
