--- a/cards/Osool.html
+++ b/cards/Osool.html
@@ -514,31 +514,31 @@
                 <div class="gallery-slider">
                     <div class="gallery-slide active">
                         <img src="https://i.imgur.com/OJeG0CS.jpeg" alt="Parquet Flooring" class="gallery-image">
-                        <div class="slide-caption">Parquet Flooring</div>
+                        <div class="slide-caption">Parquet </div>
                     </div>
                     <div class="gallery-slide">
                         <img src="https://i.imgur.com/DIBkeMB.jpeg" alt="Parquet Flooring" class="gallery-image">
-                        <div class="slide-caption">Parquet Flooring</div>
+                        <div class="slide-caption">Parquet </div>
                     </div>
                     <div class="gallery-slide">
                         <img src="https://i.imgur.com/Z5YOMaa.jpeg" alt="Bedroom Flooring" class="gallery-image">
-                        <div class="slide-caption">Bedroom Flooring</div>
+                        <div class="slide-caption">Bedroom </div>
                     </div>
                     <div class="gallery-slide">
                         <img src="https://i.imgur.com/oJ2xvhM.jpeg" alt="Parquet Flooring" class="gallery-image">
-                        <div class="slide-caption">Parquet Flooring</div>
+                        <div class="slide-caption">Parquet </div>
                     </div>
                     <div class="gallery-slide">
                         <img src="https://i.imgur.com/SGtlODg.jpeg" alt="Kitchen Flooring" class="gallery-image">
-                        <div class="slide-caption">Kitchen Flooring</div>
+                        <div class="slide-caption">Kitchen </div>
                     </div>
                     <div class="gallery-slide">
                         <img src="https://i.imgur.com/43W4h5q.jpeg" alt="Kitchen Flooring" class="gallery-image">
-                        <div class="slide-caption">Kitchen Flooring</div>
+                        <div class="slide-caption">Kitchen </div>
                     </div>
                     <div class="gallery-slide">
                         <img src="https://i.imgur.com/fiF301K.jpeg" alt="Closet Solutions" class="gallery-image">
-                        <div class="slide-caption">Closet Solutions</div>
+                        <div class="slide-caption">Closet </div>
                     </div>
                     <div class="gallery-slide">
                         <img src="https://i.imgur.com/Sp561qs.jpeg" alt="Cladding" class="gallery-image">
