--- a/cards/abdlmelk.html
+++ b/cards/abdlmelk.html
@@ -489,7 +489,7 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p class="footer-text">© 2024 Future's Journey Programming Institution - Smart Technology Solutions. All rights reserved.</p>
+            <p class="footer-text">Future's Journey Programming Institution - Smart Technology Solutions. All rights reserved.</p>
         </div>
     </footer>
 
