--- a/cards/Osool.html
+++ b/cards/Osool.html
@@ -629,7 +629,7 @@
                 <div class="social-icons-grid">
                     <a href="https://www.instagram.com/osool_jo" class="social-icon" target="_blank">
                         <i class="fab fa-instagram"></i>
-                        <span class="social-icon-label">/span>
+                        <span class="social-icon-label"></span>
                     </a>
                     
                     <a href="https://www.facebook.com/share/16etkavTBy/" class="social-icon" target="_blank">
