--- a/cards/HossamZallom.html
+++ b/cards/HossamZallom.html
@@ -513,7 +513,7 @@
             </div>
             <h1 class="profile-name">Dr. Hossam Zallom</h1>
             <p class="profile-title">Founder & Medical Director of Angel Laser Clinic</p>
-            <div class="profile-badge">Dermatology & Laser Specialist</div>
+            <div class="profile-badge">Skin Care & Laser Specialist</div>
         </div>
     </header>
 
@@ -523,24 +523,24 @@
         <div class="about-section fade-in delay-1">
             <h2 class="section-title">Professional Profile</h2>
             <div class="about-text">
-                Dr. Hossam Zallom is a renowned dermatology and laser specialist with over 12 years of experience 
-                in cosmetic and medical dermatology. As the founder and medical director of Angel Laser Clinic, 
-                he has established one of Jordan's leading centers for advanced laser treatments and skin care.
+                Dr. Hossam Zallom is the founder and medical director of Angel Laser Clinic, 
+                bringing his expertise and passion for dermatology and laser treatments to provide 
+                exceptional care for his patients.
             </div>
             
             <div class="highlight-box">
-                <div class="highlight-title">Education & Credentials</div>
+                <div class="highlight-title">Professional Focus</div>
                 <div class="about-text">
-                    • Board Certified Dermatologist<br>
-                    • Master's Degree in Laser Medicine<br>
-                    • International training in Europe and the United States<br>
-                    • Member of International Society of Dermatology
+                    • Specialized in laser treatments and skin care<br>
+                    • Committed to using advanced technology<br>
+                    • Focused on patient safety and satisfaction<br>
+                    • Personalized treatment approaches
                 </div>
             </div>
             
             <div class="about-text">
-                Dr. Zallom is passionate about combining medical expertise with the latest technological advancements 
-                to provide safe, effective, and personalized treatments for all his patients.
+                With a dedication to excellence and continuous learning, Dr. Zallom ensures that 
+                Angel Laser Clinic remains at the forefront of aesthetic and dermatological treatments.
             </div>
         </div>
 
@@ -549,53 +549,52 @@
             <h2 class="section-title">Angel Laser Clinic</h2>
             <img src="https://i.imgur.com/vhrLenE.png" alt="Angel Laser Clinic" class="clinic-logo">
             <div class="about-text">
-                Founded by Dr. Hossam Zallom, Angel Laser Clinic has been serving the community since 2015, 
-                providing state-of-the-art laser treatments and comprehensive skin care solutions.
+                Established in 2015, Angel Laser Clinic has been providing professional laser treatments 
+                and skin care services to the community with a commitment to quality and excellence.
             </div>
             <div class="highlight-box">
-                <div class="highlight-title">Clinic Specializations</div>
+                <div class="highlight-title">Our Specialties</div>
                 <div class="about-text">
                     • Laser Hair Removal for Men & Women<br>
-                    • Facial & Body Rejuvenation<br>
-                    • Acne & Scar Treatments<br>
-                    • Pigmentation Solutions<br>
-                    • Anti-Aging Procedures<br>
-                    • Medical Dermatology
+                    • Facial & Skin Treatments<br>
+                    • Professional Skin Care<br>
+                    • Advanced Laser Technology<br>
+                    • Personalized Treatment Plans
                 </div>
             </div>
         </div>
 
         <!-- Services Section -->
         <div class="services-section fade-in delay-3">
-            <h2 class="section-title">Specialized Services</h2>
+            <h2 class="section-title">Our Services</h2>
             <div class="services-grid">
                 <div class="service-card">
                     <div class="service-icon">
                         <i class="fas fa-laser"></i>
                     </div>
                     <h3 class="service-title">Laser Hair Removal</h3>
-                    <p class="service-desc">Advanced laser technology for permanent hair reduction for both men and women</p>
+                    <p class="service-desc">Professional laser hair removal treatments for both men and women</p>
                 </div>
                 <div class="service-card">
                     <div class="service-icon">
                         <i class="fas fa-face"></i>
                     </div>
                     <h3 class="service-title">Facial Treatments</h3>
-                    <p class="service-desc">Comprehensive facial rejuvenation and skin revitalization procedures</p>
-                </div>
-                <div class="service-card">
-                    <div class="service-icon">
-                        <i class="fas fa-user-md"></i>
-                    </div>
-                    <h3 class="service-title">Medical Dermatology</h3>
-                    <p class="service-desc">Diagnosis and treatment of various skin conditions and diseases</p>
+                    <p class="service-desc">Comprehensive facial care and skin rejuvenation treatments</p>
                 </div>
                 <div class="service-card">
                     <div class="service-icon">
                         <i class="fas fa-spa"></i>
                     </div>
-                    <h3 class="service-title">Skin Rejuvenation</h3>
-                    <p class="service-desc">Advanced treatments to restore youthfulness and vitality to your skin</p>
+                    <h3 class="service-title">Skin Care</h3>
+                    <p class="service-desc">Professional skin analysis and personalized care programs</p>
+                </div>
+                <div class="service-card">
+                    <div class="service-icon">
+                        <i class="fas fa-heart"></i>
+                    </div>
+                    <h3 class="service-title">Consultation</h3>
+                    <p class="service-desc">Personalized consultation and treatment recommendations</p>
                 </div>
             </div>
         </div>
@@ -659,7 +658,7 @@
     <footer>
         <div class="container">
             <p class="footer-text">Dr. Hossam Zallom - Founder & Medical Director</p>
-            <p class="footer-text">Angel Laser Clinic • Professional Dermatology & Laser Treatments</p>
+            <p class="footer-text">Angel Laser Clinic • Since 2015</p>
         </div>
     </footer>
 
