--- a/cards/HossamZallom.html
+++ b/cards/HossamZallom.html
@@ -58,14 +58,14 @@
             height: 400px;
             object-fit: cover;
             display: block;
-            transform: scale(1.3);
-            transition: transform 1.2s ease;
-            animation: zoomOut 1.5s ease-out forwards;
+            transform: scale(1.5);
+            transition: transform 1.5s ease;
+            animation: zoomOut 2s ease-out forwards;
         }
         
         @keyframes zoomOut {
             from {
-                transform: scale(1.3);
+                transform: scale(1.5);
             }
             to {
                 transform: scale(1.1);
@@ -581,28 +581,28 @@
             <div class="services-grid">
                 <div class="service-card">
                     <div class="service-icon">
-                        <i class="fas fa-laser"></i>
+                        <i class="fas fa-user-shield"></i>
                     </div>
                     <h3 class="service-title">Laser Hair Removal</h3>
-                    <p class="service-desc">Professional laser hair removal treatments for both men and women</p>
+                    <p class="service-desc">Safe and effective permanent hair reduction for face and body</p>
                 </div>
                 <div class="service-card">
                     <div class="service-icon">
-                        <i class="fas fa-face"></i>
+                        <i class="fas fa-star-of-life"></i>
                     </div>
                     <h3 class="service-title">Facial Treatments</h3>
-                    <p class="service-desc">Comprehensive facial care and skin rejuvenation treatments</p>
+                    <p class="service-desc">Rejuvenation and revitalization for glowing, healthy skin</p>
                 </div>
                 <div class="service-card">
                     <div class="service-icon">
-                        <i class="fas fa-spa"></i>
+                        <i class="fas fa-hand-holding-medical"></i>
                     </div>
                     <h3 class="service-title">Skin Care</h3>
                     <p class="service-desc">Professional skin analysis and personalized care programs</p>
                 </div>
                 <div class="service-card">
                     <div class="service-icon">
-                        <i class="fas fa-heart"></i>
+                        <i class="fas fa-stethoscope"></i>
                     </div>
                     <h3 class="service-title">Consultation</h3>
                     <p class="service-desc">Personalized consultation and treatment recommendations</p>
