Update Instagram link in Eng_Laith_Alkayad.html

--- a/cards/Eng_Laith_Alkayad.html
+++ b/cards/Eng_Laith_Alkayad.html
@@ -352,7 +352,7 @@
         <div class="social-section fade-in delay-2">
             <h2 class="social-title">Connect With Me</h2>
             <div class="social-icons-grid">
-                <a href="https://www.instagram.com/laith_alii?igsh=MWM5Mjh2OWxuNGpsNg==" class="social-icon instagram" target="_blank">
+                <a href="https://www.instagram.com/ac__water?igsh=a3ljbzBwb2M4cWpk&utm_source=qr" class="social-icon instagram" target="_blank">
                     <i class="fab fa-instagram"></i>
                 </a>
                 
