Update click label for username copy action

--- a/cards/Smart.html
+++ b/cards/Smart.html
@@ -404,7 +404,7 @@
         <div class="click-card-section fade-in delay-1">
             <div class="click-card" id="clickCard">
                 <div class="click-text" id="clickText">SMART333</div>
-                <div class="click-label">Click to copy username</div>
+                <div class="click-label">Click to copy CliQ - Jordan Kuwait Bank</div>
                 <div class="copy-notification" id="copyNotification">Copied! ✅</div>
             </div>
         </div>
