--- a/cards/ExperienceKnowledge.html
+++ b/cards/ExperienceKnowledge.html
@@ -606,7 +606,7 @@
                 </div>
                 <div class="contact-item">
                     <i class="fas fa-map-marker-alt"></i>
-                    <span class="address">Marj Al Hamam - Al Dahleh Circle<br>Near Union Bank</span>
+                    <span class="address">Marj Al Hamam - Al Dahleh Circle<br>Near Etihad Bank</span>
                 </div>
             </div>
             
