--- a/cards/Osool.html
+++ b/cards/Osool.html
@@ -14,7 +14,7 @@
             --accent: #cd853f;
             --light-bg: #f5f5f5;
             --light-card: #ffffff;
-            --dark-text: #333333;
+            --dark-text: #000000;
             --shadow: 0 8px 25px rgba(0, 0, 0, 0.08);
             --border: 1px solid #d2b48c;
             --social-color: #8b4513;
@@ -95,7 +95,7 @@
             font-size: 2.5rem;
             font-weight: 800;
             margin-bottom: 8px;
-            color: var(--primary-dark);
+            color: var(--dark-text);
         }
         
         .profile-title {
@@ -127,7 +127,7 @@
         .tagline {
             font-size: 1.4rem;
             font-weight: 700;
-            color: var(--primary);
+            color: var(--dark-text);
             margin-bottom: 15px;
         }
         
@@ -209,7 +209,7 @@
         .gallery-btn {
             background: rgba(255, 255, 255, 0.9);
             border: 1px solid var(--primary);
-            color: var(--primary-dark);
+            color: var(--dark-text);
             width: 50px;
             height: 50px;
             border-radius: 50%;
@@ -314,7 +314,7 @@
             font-size: 1.4rem;
             font-weight: 700;
             margin-bottom: 25px;
-            color: var(--primary-dark);
+            color: var(--dark-text);
             text-align: center;
             padding-bottom: 10px;
             border-bottom: 2px solid var(--primary-light);
