--- a/cards/Zohoor_Khalda.html
+++ b/cards/Zohoor_Khalda.html
@@ -457,7 +457,7 @@
         <div class="click-card-section fade-in delay-1">
             <div class="click-card" id="clickCard">
                 <div class="click-text" id="clickText">0798915586</div>
-                <div class="click-label">Click to copy main number</div>
+                <div class="click-label">CliQr</div>
                 <div class="copy-notification" id="copyNotification">Copied! ✅</div>
             </div>
         </div>
