--- a/cards/MODA.html
+++ b/cards/MODA.html
@@ -573,7 +573,7 @@
     <footer>
         <div class="container">
             <p class="footer-text">Moda Colors - Your First Destination for Everything the Modern Woman Needs</p>
-            <p class="footer-text">All Rights Reserved © 2024</p>
+            <p class="footer-text"></p>
         </div>
     </footer>
 
