--- a/cards/beit-yafa-pharmacy.html
+++ b/cards/beit-yafa-pharmacy.html
@@ -589,7 +589,7 @@
     <!-- Header Section -->
     <header class="profile-header fade-in">
         <div class="cover-container">
-            <img src="https://i.imgur.com/YUmcEkB.jpeg" alt="Beit Yafa Pharmacy" class="cover-photo">
+            <img src="https://i.imgur.com/E9DNawx.jpeg" alt="Beit Yafa Pharmacy Cover" class="cover-photo">
         </div>
         <div class="profile-info">
             <div class="profile-image-container">
@@ -752,7 +752,7 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p class="footer-text">Beit Yafa Pharmacy - Trusted Healthcare Since 2014</p>
+            <p class="footer-text">Beit Yafa Pharmacy - </p>
             <p class="footer-text">Serving Beit Yafa Community and Surrounding Areas</p>
             <p class="footer-text"></p>
         </div>
