--- a/cards/beit-yafa-pharmacy.html
+++ b/cards/beit-yafa-pharmacy.html
@@ -589,11 +589,11 @@
     <!-- Header Section -->
     <header class="profile-header fade-in">
         <div class="cover-container">
-            <img src="https://i.imgur.com/E9DNawx.jpeg" alt="Beit Yafa Pharmacy Cover" class="cover-photo">
+            <img src="https://i.imgur.com/THmhbJ6.png" alt="Beit Yafa Pharmacy Cover" class="cover-photo">
         </div>
         <div class="profile-info">
             <div class="profile-image-container">
-                <img src="https://i.imgur.com/YUmcEkB.jpeg" alt="Beit Yafa Pharmacy" class="profile-image">
+                <img src="https://i.imgur.com/BYfKlDS.jpeg" alt="Beit Yafa Pharmacy" class="profile-image">
             </div>
             <h1 class="profile-name">Beit Yafa Pharmacy</h1>
             <p class="profile-title"></p>
@@ -622,7 +622,7 @@
                 <div class="gallery-container">
                     <div class="gallery-slides">
                         <div class="gallery-slide">
-                            <img src="https://i.imgur.com/YUmcEkB.jpeg" alt="Beit Yafa Pharmacy">
+                            <img src="https://i.imgur.com/BYfKlDS.jpeg" alt="Beit Yafa Pharmacy">
                         </div>
                         <div class="gallery-slide">
                             <img src="https://i.imgur.com/AvjkbfH.jpeg" alt="Pharmacy Interior">
