--- a/cards/beit-yafa-pharmacy.html
+++ b/cards/beit-yafa-pharmacy.html
@@ -90,7 +90,8 @@
             position: relative;
             padding: 0 20px 30px;
             text-align: center;
-            margin-top: -80px;
+            /* تم تغيير الهامش العلوي لجعل الصورة الشخصية تنزل أكثر للأسفل */
+            margin-top: -40px;
             z-index: 2;
         }
         
@@ -257,7 +258,7 @@
         .gallery-dot {
             width: 10px;
             height: 10px;
-            border-radius: 50%;
+            borderRadius: 50%;
             background: var(--primary-light);
             cursor: pointer;
             transition: all 0.3s ease;
@@ -614,7 +615,7 @@
         </div>
         <div class="profile-info">
             <div class="profile-image-container">
-                <img src="https://i.imgur.com/BYfKlDS.jpeg" alt="Beit Yafa Pharmacy" class="profile-image">
+                <img src="https://i.imgur.com/LtVqtDn.jpeg" alt="Beit Yafa Pharmacy" class="profile-image">
             </div>
             <h1 class="profile-name">Beit Yafa Pharmacy</h1>
             <p class="profile-title">Trusted Healthcare Since 2014</p>
