--- a/cards/deir-saana-pharmacy.html
+++ b/cards/deir-saana-pharmacy.html
@@ -628,6 +628,9 @@
                 صيدلية دير السعنة، تقدم خدماتها لجميع أهالي منطقة دير السعنة والمناطق المجاورة
             </div>
             <div class="about-text arabic-text">
+                صيدلية دير السعنة، تأسست عام 2016، تقدم خدماتها لجميع أهالي منطقة دير السعنة والمناطق المجاورة، ملتزمة بتوفير الأدوية الأصلية والرعاية الصيدلانية بأعلى معايير الجودة. نسعى لخدمة المجتمع المحلي من خلال صرف الأدوية الموصوفة بدقة، وتقديم الاستشارات الصحية، وتوفير المستلزمات الطبية الضرورية.
+                        هدفنا أن نكون الشريك الصحي الموثوق لراحة وصحة كل فرد منكم.
+                
                 تُعد وجهة موثوقة للرعاية الدوائية والصحية. نحرص على توفير الأدوية الأصلية والاستشارات الصيدلانية بأعلى معايير الجودة، مع خدمة مميزة تشمل صرف الأدوية الموصوفة، تقديم النصائح الصحية، وتوفير المستلزمات الطبية وأجهزة القياس.
             </div>
             <div class="about-text arabic-text">
