--- a/cards/raheeq-cafe.html
+++ b/cards/raheeq-cafe.html
@@ -628,11 +628,11 @@
     <!-- Header Section -->
     <header class="profile-header fade-in">
         <div class="cover-container">
-            <img src="https://i.imgur.com/UgALve4.jpeg" alt="كافيه رحيق" class="cover-photo">
+            <img src="https://i.imgur.com/OZTQ64h.jpeg" alt="كافيه رحيق" class="cover-photo">
         </div>
         <div class="profile-info">
             <div class="profile-image-container">
-                <img src="https://i.imgur.com/HO1RKVA.jpeg" alt="كافيه رحيق" class="profile-image">
+                <img src="https://i.imgur.com/UgALve4.jpeg" alt="كافيه رحيق" class="profile-image">
                 <div class="verified-badge">
                     <i class="fas fa-leaf"></i>
                 </div>
