--- a/cards/raheeq-cafe.html
+++ b/cards/raheeq-cafe.html
@@ -632,7 +632,7 @@
         </div>
         <div class="profile-info">
             <div class="profile-image-container">
-                <img src="https://i.imgur.com/UgALve4.jpeg" alt="كافيه رحيق" class="profile-image">
+                <img src="https://i.imgur.com/UgALve4.png" alt="كافيه رحيق" class="profile-image">
                 <div class="verified-badge">
                     <i class="fas fa-leaf"></i>
                 </div>
