--- a/cards/Qusai_AbuSeif.html
+++ b/cards/Qusai_AbuSeif.html
@@ -645,7 +645,7 @@
     <!-- Header Section -->
     <header class="profile-header fade-in">
         <div class="cover-container">
-            <img src="https://i.imgur.com/JE55gE1.png" alt="Qusai AbuSeif Cover" class="cover-photo">
+            <img src="https://i.imgur.com/p9dDkAL.jpeg" alt="Qusai AbuSeif Cover" class="cover-photo">
         </div>
         <div class="profile-info">
             <div class="profile-image-container">
