--- a/cards/blink.html
+++ b/cards/blink.html
@@ -850,7 +850,7 @@
     <footer>
         <div class="container">
             <p class="footer-text">Blink متجر الملابس - حيث الأناقة تلتقي بالراحة</p>
-            <p class="footer-text">جميع الحقوق محفوظة © 2024</p>
+            <p class="footer-text"></p>
         </div>
     </footer>
 
