--- a/cards/raheeq-cafe.html
+++ b/cards/raheeq-cafe.html
@@ -774,7 +774,7 @@
                 <i class="fas fa-phone"></i>
                 اتصل الآن
             </a>
-            <a href="https://maps.app.goo.gl/gUxuyQتقjixarXFAbd9?g_st=ipc" class="action-button" target="_blank">
+            <a href="https://maps.app.goo.gl/gUxuyQjixarXFAbd9?g_st=ipc" class="action-button" target="_blank">
                 <i class="fas fa-map-marker-alt"></i>
                 الموقع
             </a>
