--- a/cards/raheeq-cafe.html
+++ b/cards/raheeq-cafe.html
@@ -752,7 +752,7 @@
                 <a href="https://www.facebook.com/share/1A348Yi9QZ/?mibextid=wwXIfr" class="social-icon" target="_blank">
                     <i class="fab fa-facebook"></i>
                 </a>
-                <a href="https://maps.app.goo.gl/gUxuyQتقjixarXFAbd9?g_st=ipc" class="social-icon" target="_blank">
+                <a href="https://maps.app.goo.gl/gUxuyQjixarXFAbd9?g_st=ipc" class="social-icon" target="_blank">
                     <i class="fas fa-map-marker-alt"></i>
                 </a>
                 <a href="https://shorturl.at/6nfHQ" class="social-icon" target="_blank">
