--- a/cards/Miss-Noor-Boutique.html
+++ b/cards/Miss-Noor-Boutique.html
@@ -705,6 +705,14 @@
                     <i class="fas fa-phone"></i>
                     <span>962789934424</span>
                 </a>
+                <a href="https://www.instagram.com/miss_noor_boutique_" class="contact-item" target="_blank">
+                    <i class="fab fa-instagram"></i>
+                    <span>@miss_noor_boutique_</span>
+                </a>
+                <a href="https://www.snapchat.com/add/noor.a51" class="contact-item" target="_blank">
+                    <i class="fab fa-snapchat"></i>
+                    <span>noor.a51</span>
+                </a>
                 <a href="https://maps.google.com/maps?q=32.100807189941406%2C36.10467529296875&z=17&hl=ar" class="contact-item" target="_blank">
                     <i class="fas fa-map-marker-alt"></i>
                     <span>الموقع على الخريطة</span>
@@ -721,6 +729,12 @@
         <div class="social-section fade-in delay-3">
             <h2 class="social-title">تابعونا</h2>
             <div class="social-icons-grid">
+                <a href="https://www.instagram.com/miss_noor_boutique_" class="social-icon" target="_blank">
+                    <i class="fab fa-instagram"></i>
+                </a>
+                <a href="https://www.snapchat.com/add/noor.a51" class="social-icon" target="_blank">
+                    <i class="fab fa-snapchat"></i>
+                </a>
                 <a href="https://maps.google.com/maps?q=32.100807189941406%2C36.10467529296875&z=17&hl=ar" class="social-icon" target="_blank">
                     <i class="fas fa-map-marker-alt"></i>
                 </a>
@@ -736,9 +750,9 @@
                 <i class="fas fa-download"></i>
                 حفظ جهة الاتصال
             </a>
-            <a href="https://maps.google.com/maps?q=32.100807189941406%2C36.10467529296875&z=17&hl=ar" class="action-button" target="_blank">
-                <i class="fas fa-map-marker-alt"></i>
-                الموقع على الخريطة
+            <a href="https://www.instagram.com/miss_noor_boutique_" class="action-button" target="_blank">
+                <i class="fab fa-instagram"></i>
+                الإنستغرام
             </a>
             <a href="tel:962789934424" class="action-button">
                 <i class="fas fa-phone"></i>
@@ -763,6 +777,7 @@ VERSION:3.0
 FN:Miss Noor Boutique
 ORG:Miss Noor Boutique
 TEL:962789934424
+URL:https://www.instagram.com/miss_noor_boutique_
 END:VCARD`;
             
             const blob = new Blob([vcard], { type: 'text/vcard' });
