--- a/cards/Yasmeen.html
+++ b/cards/Yasmeen.html
@@ -754,7 +754,7 @@
         <div class="container">
             <p class="footer-text">مركز الياسمين للعلاج الطبيعي</p>
             <p class="footer-text">رعاية متخصصة لاستعادة الحركة وتحسين جودة الحياة</p>
-            <p class="footer-text">جميع الحقوق محفوظة © 2023</p>
+            <p class="footer-text"></p>
         </div>
     </footer>
 
