--- a/cards/raheeq-cafe.html
+++ b/cards/raheeq-cafe.html
@@ -716,7 +716,7 @@
                 <div class="cliq-title">خدمة Cliq</div>
                 <button class="cliq-button" id="cliqButton" onclick="copyCliqNumber()">
                     <i class="fas fa-copy"></i>
-                    نسخ الرقم: RAHEEQCAFE
+                    نسخ الرقم: 0781460409
                 </button>
             </div>
             
