--- a/cards/Qusai_AbuSeif.html
+++ b/cards/Qusai_AbuSeif.html
@@ -470,6 +470,8 @@
             transition: all 0.3s ease;
             color: var(--dark-text);
             border: var(--border);
+            cursor: pointer;
+            text-decoration: none;
         }
         
         .contact-item:hover {
@@ -857,18 +859,18 @@
         <div class="contact-section fade-in delay-3">
             <h2 class="section-title">Connect With Me</h2>
             <div class="contact-info">
-                <div class="contact-item">
+                <a href="https://www.instagram.com/qusai_abuseif1?igsh=NmUzbGpmbHNoOTlk" class="contact-item" target="_blank">
                     <i class="fab fa-instagram"></i>
                     <span>@qusai_abuseif1</span>
-                </div>
-                <div class="contact-item">
+                </a>
+                <a href="https://www.snapchat.com/add/qusai_abusaif" class="contact-item" target="_blank">
                     <i class="fab fa-snapchat"></i>
                     <span>@qusai_abusaif</span>
-                </div>
-                <div class="contact-item">
+                </a>
+                <a href="https://t.me/qas_life" class="contact-item" target="_blank">
                     <i class="fab fa-telegram"></i>
-                    <span>@qas_figures</span>
-                </div>
+                    <span>@qas_life</span>
+                </a>
             </div>
         </div>
 
@@ -882,7 +884,7 @@
                 <a href="https://www.snapchat.com/add/qusai_abusaif" class="social-icon" target="_blank">
                     <i class="fab fa-snapchat"></i>
                 </a>
-                <a href="https://t.me/qas_figures" class="social-icon" target="_blank">
+                <a href="https://t.me/qas_life" class="social-icon" target="_blank">
                     <i class="fab fa-telegram"></i>
                 </a>
                 <a href="https://goo.gl/maps/8HEHvjtBzqmFj32j8" class="social-icon" target="_blank">
@@ -901,7 +903,7 @@
                 <i class="fab fa-instagram"></i>
                 Follow on Instagram
             </a>
-            <a href="https://t.me/qas_figures" class="action-button" target="_blank">
+            <a href="https://t.me/qas_life" class="action-button" target="_blank">
                 <i class="fab fa-telegram"></i>
                 Join Telegram
             </a>
@@ -928,7 +930,7 @@ ORG:Career Coach & Financial Markets Expert;
 TEL;TYPE=WORK,VOICE:Business Inquiries
 URL:https://www.instagram.com/qusai_abuseif1
 URL:https://www.snapchat.com/add/qusai_abusaif
-URL:https://t.me/qas_figures
+URL:https://t.me/qas_life
 URL:https://portal.my-equiti.com/sc/register/?accountType=Standard&clickid=1143329&affid=C02209866
 NOTE:Qusai AbuSeif - Career Coach & Financial Markets Expert with 1.5M followers. Owner of @qas_figures. 6K+ students worldwide. Based in Dubai & Amman. ممكن تساعدك
 END:VCARD`;
