--- a/cards/Qusai_AbuSeif.html
+++ b/cards/Qusai_AbuSeif.html
@@ -772,11 +772,11 @@
             <div class="phone-numbers">
                 <div class="phone-card" onclick="copyToClipboard('+962792361999', 'Private Number')">
                     <div class="phone-title">Private Number</div>
-                    <div class="phone-number">+962 79 236 1999</div>
+                    <div class="phone-number">0792361999</div>
                 </div>
                 <div class="phone-card" onclick="copyToClipboard('+962795063950', 'Business Manager Number')">
                     <div class="phone-title">Business Manager Number</div>
-                    <div class="phone-number">+962 79 506 3950</div>
+                    <div class="phone-number">07950633950</div>
                 </div>
             </div>
         </div>
