--- a/cards/Qusai_AbuSeif.html
+++ b/cards/Qusai_AbuSeif.html
@@ -869,7 +869,7 @@
                 </a>
                 <a href="https://t.me/qas_life" class="contact-item" target="_blank">
                     <i class="fab fa-telegram"></i>
-                    <span>@qas_life</span>
+                    <span>@qas_figures</span>
                 </a>
             </div>
         </div>
