--- a/cards/Card1.html
+++ b/cards/Card1.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Smart Service | بطاقة موظف 101</title>
+    <title>Smart Service | بطاقة موظف 1</title>
 
-    <!-- أيقونات بسيطة (اختياري) -->
+    <!-- أيقونات -->
     <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
@@ -13,13 +13,15 @@
         :root {
             --yellow-main: #ffc800;
             --yellow-soft: #fff7cf;
-            --purple-dark: #1d1236;
-            --purple-soft: #2c1f4a;
-            --text-main: #222;
-            --text-muted: #666;
+            --orange-soft: #ffb057;
+            --purple-dark: #140b33;
+            --purple-soft: #281453;
+            --bg-body: #050410;
+            --text-main: #f5f5f5;
+            --text-muted: #c9c9c9;
             --radius-lg: 24px;
             --radius-md: 18px;
-            --shadow-soft: 0 14px 30px rgba(0, 0, 0, 0.18);
+            --shadow-soft: 0 18px 40px rgba(0, 0, 0, 0.55);
         }
 
         * {
@@ -30,7 +32,10 @@
         }
 
         body {
-            background: radial-gradient(circle at top, #fff7cf 0, #f4f4f8 40%, #e7e9f3 100%);
+            background:
+                radial-gradient(circle at top left, rgba(255, 200, 0, 0.16), transparent 55%),
+                radial-gradient(circle at bottom right, rgba(120, 78, 255, 0.28), transparent 60%),
+                var(--bg-body);
             color: var(--text-main);
             min-height: 100vh;
             padding: 20px 12px 40px;
@@ -39,11 +44,43 @@
         .page-wrapper {
             max-width: 520px;
             margin: 0 auto;
+            position: relative;
+        }
+
+        /* كرات إضاءة خلفية */
+        .glow-orb {
+            position: fixed;
+            border-radius: 999px;
+            filter: blur(40px);
+            opacity: 0.35;
+            z-index: -1;
+            animation: floatOrb 16s ease-in-out infinite alternate;
+        }
+        .glow-orb.orb-1 {
+            width: 260px;
+            height: 260px;
+            background: #ffdd57;
+            top: -80px;
+            left: -70px;
+        }
+        .glow-orb.orb-2 {
+            width: 260px;
+            height: 260px;
+            background: #6c5ce7;
+            bottom: -80px;
+            right: -80px;
+            animation-delay: 4s;
+        }
+
+        @keyframes floatOrb {
+            from { transform: translate3d(0,0,0); }
+            to   { transform: translate3d(20px,-30px,0) scale(1.05); }
         }
 
         /* هيدر */
         .hero-card {
-            background: linear-gradient(135deg, var(--purple-dark), var(--purple-soft));
+            background: radial-gradient(circle at top, #ffdd57 0, #ffb057 18%, transparent 45%),
+                        linear-gradient(135deg, var(--purple-dark), var(--purple-soft));
             color: #fff;
             border-radius: 28px;
             padding: 22px 20px 26px;
@@ -51,6 +88,8 @@
             margin-bottom: 22px;
             position: relative;
             overflow: hidden;
+            border: 1px solid rgba(255,255,255,0.08);
+            animation: fadeUp 0.8s ease-out;
         }
 
         .hero-badge {
@@ -59,9 +98,10 @@
             gap: 8px;
             padding: 5px 11px;
             border-radius: 999px;
-            background: rgba(0, 0, 0, 0.18);
+            background: rgba(0, 0, 0, 0.35);
             font-size: 0.8rem;
             margin-bottom: 10px;
+            backdrop-filter: blur(8px);
         }
 
         .hero-badge i {
@@ -69,14 +109,15 @@
         }
 
         .hero-title {
-            font-size: 1.4rem;
+            font-size: 1.5rem;
             font-weight: 800;
             margin-bottom: 6px;
+            letter-spacing: 0.5px;
         }
 
         .hero-subtitle {
-            font-size: 0.9rem;
-            color: #f5f5f5;
+            font-size: 0.93rem;
+            color: #f9f9f9;
             margin-bottom: 14px;
         }
 
@@ -91,7 +132,7 @@
             display: flex;
             align-items: center;
             gap: 7px;
-            opacity: 0.9;
+            opacity: 0.95;
         }
 
         .meta-item i {
@@ -102,24 +143,66 @@
             position: absolute;
             inset-inline-start: -40px;
             bottom: -55px;
-            width: 200%;
+            width: 220%;
             height: 120px;
-            background: radial-gradient(circle at center, rgba(255, 200, 0, 0.25), transparent 55%);
-            opacity: 0.85;
+            background: radial-gradient(circle at center, rgba(255, 200, 0, 0.22), transparent 55%);
+            opacity: 0.9;
             pointer-events: none;
         }
 
-        /* كرت "من نحن" */
+        /* أيقونات عائمة */
+        .floating-icons {
+            position: absolute;
+            inset-inline-end: 18px;
+            inset-block-start: 20px;
+            display: flex;
+            flex-direction: column;
+            gap: 8px;
+            opacity: 0.9;
+        }
+
+        .floating-icons span {
+            width: 32px;
+            height: 32px;
+            border-radius: 999px;
+            background: rgba(3, 3, 3, 0.4);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 0.9rem;
+            color: var(--yellow-main);
+            border: 1px solid rgba(255,255,255,0.18);
+            animation: floatY 3s ease-in-out infinite alternate;
+        }
+
+        .floating-icons span:nth-child(2) { animation-delay: 0.5s; }
+        .floating-icons span:nth-child(3) { animation-delay: 1s; }
+
+        @keyframes floatY {
+            from { transform: translateY(0); }
+            to   { transform: translateY(-10px); }
+        }
+
+        /* كرت عام */
         .card {
-            background: #fff;
+            background: linear-gradient(135deg, rgba(255,255,255,0.04), rgba(255,255,255,0.03));
             border-radius: var(--radius-lg);
             padding: 18px 16px 20px;
             margin-bottom: 18px;
-            box-shadow: var(--shadow-soft);
+            box-shadow: 0 14px 30px rgba(0,0,0,0.48);
+            border: 1px solid rgba(255,255,255,0.08);
+            backdrop-filter: blur(12px);
+            color: var(--text-main);
+            animation: fadeUp 0.8s ease-out;
+            animation-fill-mode: both;
         }
 
+        .card:nth-of-type(2) { animation-delay: 0.1s; }
+        .card:nth-of-type(3) { animation-delay: 0.2s; }
+        .card:nth-of-type(4) { animation-delay: 0.3s; }
+
         .card-title {
-            font-size: 1.1rem;
+            font-size: 1.05rem;
             font-weight: 700;
             margin-bottom: 10px;
             display: flex;
@@ -146,32 +229,52 @@
         }
 
         .service-item {
-            background: var(--yellow-soft);
+            background: radial-gradient(circle at top, rgba(255,200,0,0.45), rgba(31,24,65,0.95));
             border-radius: var(--radius-md);
             padding: 10px 10px 12px;
             font-size: 0.86rem;
             line-height: 1.6;
-            border: 1px solid #f1e3a6;
+            border: 1px solid rgba(255,255,255,0.16);
+            color: #fff;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .service-item::before {
+            content: "";
+            position: absolute;
+            inset: 0;
+            background: linear-gradient(120deg, rgba(255,255,255,0.18), transparent 60%);
+            opacity: 0;
+            transform: translateX(-40%);
+            transition: all 0.4s ease;
+        }
+
+        .service-item:hover::before {
+            opacity: 1;
+            transform: translateX(0);
         }
 
         .service-title {
             font-weight: 700;
             margin-bottom: 4px;
-            color: #865900;
+            color: #ffeaa7;
         }
 
         .service-desc {
-            color: #694b00;
+            color: #f1f1f1;
         }
 
         /* كرت الموظف */
         .employee-card {
-            background: #fff;
+            background: linear-gradient(135deg, rgba(255,200,0,0.1), rgba(255,255,255,0.02));
             border-radius: var(--radius-lg);
             padding: 18px 16px 20px;
             margin-bottom: 18px;
-            box-shadow: var(--shadow-soft);
+            box-shadow: 0 16px 34px rgba(0,0,0,0.55);
             border-inline-start: 4px solid var(--yellow-main);
+            border-block-start: 1px solid rgba(255,255,255,0.1);
+            border-block-end: 1px solid rgba(255,255,255,0.08);
         }
 
         .employee-id {
@@ -188,23 +291,28 @@
 
         /* التقييم */
         .rating-card {
-            background: var(--purple-dark);
+            background: radial-gradient(circle at top, rgba(255,200,0,0.3), transparent 50%),
+                        linear-gradient(145deg, #1b103d, #080515);
             color: #fff;
             border-radius: 26px;
-            padding: 18px 16px 22px;
-            box-shadow: var(--shadow-soft);
+            padding: 20px 16px 24px;
+            box-shadow: 0 18px 40px rgba(0,0,0,0.7);
             text-align: center;
+            border: 1px solid rgba(255,255,255,0.12);
+            animation: fadeUp 0.8s ease-out;
+            animation-delay: 0.35s;
+            animation-fill-mode: both;
         }
 
         .rating-card h2 {
             font-size: 1.15rem;
-            margin-bottom: 8px;
+            margin-bottom: 6px;
         }
 
         .rating-card p {
             font-size: 0.9rem;
             color: #f3f3f3;
-            margin-bottom: 14px;
+            margin-bottom: 10px;
         }
 
         .rating-buttons {
@@ -212,33 +320,46 @@
             justify-content: center;
             gap: 8px;
             flex-wrap: wrap;
+            margin-top: 6px;
         }
 
         .rate-btn {
             min-width: 54px;
-            padding: 7px 10px;
+            padding: 7px 11px;
             border-radius: 999px;
             border: none;
-            background: var(--yellow-main);
+            background: linear-gradient(135deg, #ffdd57, #ffb057);
             color: #000;
-            font-weight: 700;
+            font-weight: 800;
             font-size: 0.9rem;
             text-decoration: none;
             display: inline-flex;
             align-items: center;
             justify-content: center;
             gap: 4px;
-            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.25);
+            box-shadow: 0 10px 22px rgba(0, 0, 0, 0.45);
+            transform: translateY(0);
+            transition: all 0.2s ease;
         }
 
         .rate-btn span {
             font-size: 0.8rem;
+            font-weight: 600;
+        }
+
+        .rate-btn:hover {
+            transform: translateY(-3px) scale(1.04);
+            box-shadow: 0 16px 32px rgba(0,0,0,0.7);
         }
 
         .rating-hint {
             font-size: 0.8rem;
             margin-top: 10px;
-            color: #ddd;
+            color: #e1e1e1;
+        }
+
+        .rating-hint strong {
+            color: var(--yellow-main);
         }
 
         /* فوتر صغير */
@@ -246,24 +367,47 @@
             text-align: center;
             margin-top: 16px;
             font-size: 0.78rem;
-            color: #777;
+            color: #9a9a9a;
+        }
+
+        @keyframes fadeUp {
+            from {
+                opacity: 0;
+                transform: translateY(26px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
         }
 
         @media (max-width: 480px) {
             .hero-title {
-                font-size: 1.25rem;
+                font-size: 1.3rem;
             }
             .services-grid {
                 grid-template-columns: 1fr;
+            }
+            .floating-icons {
+                inset-inline-end: 12px;
             }
         }
     </style>
 </head>
 <body>
+<div class="glow-orb orb-1"></div>
+<div class="glow-orb orb-2"></div>
+
 <div class="page-wrapper">
 
     <!-- هيدر تعريفي -->
     <section class="hero-card">
+        <div class="floating-icons">
+            <span><i class="fas fa-bolt"></i></span>
+            <span><i class="fas fa-fan"></i></span>
+            <span><i class="fas fa-plug"></i></span>
+        </div>
+
         <div class="hero-badge">
             <i class="fas fa-screwdriver-wrench"></i>
             <span>Smart Service | صيانة متكاملة</span>
@@ -331,7 +475,7 @@
             <div class="service-item">
                 <div class="service-title">التكييف والتبريد</div>
                 <div class="service-desc">
-                    تركيب وصيانة المكيفات والجلرّات بجميع أحجامها.
+                    تركيب وصيانة المكيفات والجلّرات بجميع أحجامها.
                 </div>
             </div>
 
@@ -360,7 +504,7 @@
 
     <!-- بطاقة الموظف -->
     <section class="employee-card">
-        <div class="employee-id">بطاقة موظف رقم: <strong>101</strong></div>
+        <div class="employee-id">بطاقة موظف رقم: <strong>1</strong></div>
         <p class="employee-note">
             هذه الصفحة مخصصة لتعريفك بخدمات Smart Service ولتقييم تجربتك مع موظفنا صاحب هذه
             البطاقة. رأيك يساعدنا نطوّر الخدمة ونكافئ الموظفين المتميزين.
@@ -369,28 +513,28 @@
 
     <!-- التقييم عبر الإيميل -->
     <section class="rating-card">
-        <h2>بماذا تقيم موظفنا رقم 101؟</h2>
+        <h2>بماذا تقيم موظفنا رقم 1؟</h2>
         <p>اختر التقييم المناسب لك، وسيتم فتح رسالة جاهزة على بريدك لإرسال رأيك مباشرة إلى الإدارة.</p>
 
         <div class="rating-buttons">
             <a class="rate-btn"
-               href="mailto:Saleh-Abuali-531@hotmail.com?subject=تقييم%20موظف%20رقم%20101&body=أقيّم%20موظفكم%20رقم%20101%20بدرجة%205%20من%205.%0Aاكتب%20ملاحظاتك%20هنا:">
+               href="mailto:info@smartservice-jo.com?subject=تقييم%20موظف%20رقم%201&body=أقيّم%20موظفكم%20رقم%201%20بدرجة%205%20من%205.%0Aاكتب%20ملاحظاتك%20هنا:">
                 5 ★<span>ممتاز</span>
             </a>
             <a class="rate-btn"
-               href="mailto:Saleh-Abuali-531@hotmail.com?subject=تقييم%20موظف%20رقم%20101&body=أقيّم%20موظفكم%20رقم%20101%20بدرجة%204%20من%205.%0Aاكتب%20ملاحظاتك%20هنا:">
+               href="mailto:info@smartservice-jo.com?subject=تقييم%20موظف%20رقم%201&body=أقيّم%20موظفكم%20رقم%201%20بدرجة%204%20من%205.%0Aاكتب%20ملاحظاتك%20هنا:">
                 4 ★<span>جيد جداً</span>
             </a>
             <a class="rate-btn"
-               href="mailto:Saleh-Abuali-531@hotmail.com?subject=تقييم%20موظف%20رقم%20101&body=أقيّم%20موظفكم%20رقم%20101%20بدرجة%203%20من%205.%0Aاكتب%20ملاحظاتك%20هنا:">
+               href="mailto:info@smartservice-jo.com?subject=تقييم%20موظف%20رقم%201&body=أقيّم%20موظفكم%20رقم%201%20بدرجة%203%20من%205.%0Aاكتب%20ملاحظاتك%20هنا:">
                 3 ★<span>جيد</span>
             </a>
             <a class="rate-btn"
-               href="mailto:Saleh-Abuali-531@hotmail.com?subject=تقييم%20موظف%20رقم%20101&body=أقيّم%20موظفكم%20رقم%20101%20بدرجة%202%20من%205.%0Aاكتب%20ملاحظاتك%20هنا:">
+               href="mailto:info@smartservice-jo.com?subject=تقييم%20موظف%20رقم%201&body=أقيّم%20موظفكم%20رقم%201%20بدرجة%202%20من%205.%0Aاكتب%20ملاحظاتك%20هنا:">
                 2 ★<span>مقبول</span>
             </a>
             <a class="rate-btn"
-               href="mailto:Saleh-Abuali-531@hotmail.com?subject=تقييم%20موظف%20رقم%20101&body=أقيّم%20موظفكم%20رقم%20101%20بدرجة%201%20من%205.%0Aاكتب%20ملاحظاتك%20هنا:">
+               href="mailto:info@smartservice-jo.com?subject=تقييم%20موظف%20رقم%201&body=أقيّم%20موظفكم%20رقم%201%20بدرجة%201%20من%205.%0Aاكتب%20ملاحظاتك%20هنا:">
                 1 ★<span>سيّئ</span>
             </a>
         </div>
@@ -398,7 +542,7 @@
         <div class="rating-hint">
             إذا لم يفتح البريد تلقائياً، يمكنك نسخ الإيميل التالي وإرسال تقييمك:
             <br>
-            <strong>Saleh-Abuali-531@hotmail.com</strong>
+            <strong>info@smartservice-jo.com</strong>
         </div>
     </section>
 
